--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,14 +13,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Docker Compose
-        run: sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-      - name: make the script executable
-        run: sudo chmod +x /usr/local/bin/docker-compose  
-      - name: Build Docker image
-        run:  docker-compose build
-      - name: Show Docker images
-        run: docker images
+      # - name: Set up Docker Compose
+      #   run: sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+      # - name: make the script executable
+      #   run: sudo chmod +x /usr/local/bin/docker-compose  
+      # - name: Build Docker image
+      #   run:  docker-compose build
+      # - name: Show Docker images
+      #   run: docker images
 
 
       - name: Tag Docker image
